fix: overflow hidden, rm network alert

--- a/year/2022/summer/style.css
+++ b/year/2022/summer/style.css
@@ -5,6 +5,7 @@ body {
   font-family: serif;
   height: 100vh;
   height: -webkit-fill-available;
+  overflow: hidden;
 }
 
 #gozoku-summer {
